--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Conference reception bot for Discord with Google spreadsheet",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "start:development": "NODE_ENV=development node index.js",
-    "start:production": "NODE_ENV=production node index.js",
+    "start": "NODE_ENV=production node index.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
